--- a/언어 - JavaScript/1_자바스크립트_언어소개.md
+++ b/언어 - JavaScript/1_자바스크립트_언어소개.md
@@ -1,5 +1,5 @@
-#### **1) 자바스크립트**
-- 웹 브라우저로 분류되는 소프트웨어들을 **‘프로그래밍적으로 제어’**하기 위한 언어
+### **1) 자바스크립트**
+- 웹 브라우저로 분류되는 소프트웨어들을 **프로그래밍적으로 제어**하기 위한 언어
 - 웹 브라우저 제어를 벗어나 웹 서버까지 영향을 확장하고 있음 (탈 웹 브라우저)
     - ex) 웹 서버를 동작하기 위한 도구 (서버 사이드 스크립트) => Node.js
         - 웹 브라우저를 제어하기 위한 기술로써 자바스크립트, 웹 서버를 제어하기 위한 가술로써 자바스크립트를 사용 가능
@@ -9,8 +9,6 @@
     - ex) Google Apps Script
 
 <br>
-- - -
-<br>
 
 ### **2) 언어**
 - 의사소통을 위한 **약속**
@@ -19,11 +17,10 @@
     - 그 문법에 따라 하고 싶은 일을 작성해서 컴퓨터에게 제출하게 되면 작성자와 컴퓨터 모두 그 문법을 이해하고 있기 때문에 원하는 것을 컴퓨터가 해 줄 수 있음
 
 <br>
-- - -
-<br>
 
 ### **3) 환경**
 - 언어를 사용하는 **대상**
     - 탈 웹 브라우저, 탈 웹 등 다양한 분야에서 자바스크립트가 사용되고 있기 때문에 언어와 언어가 동작하는 환경을 조금 분리해서 생각하면 효용이 있음
-    - ex) ![example](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbhqLle%2FbtqZ1KEVzti%2F3b2DNieXoLjUt4pkWlj8q0%2Fimg.png)
+    - ex) <br>
+      ![example](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbhqLle%2FbtqZ1KEVzti%2F3b2DNieXoLjUt4pkWlj8q0%2Fimg.png)
 - 언어라는 공통 분모를 가지고 각각의 다른 환경을 제어하게 되는데, 그 환경에 따라서 할 수 있는 일과 명령하기 위한 명령어가 다름
