--- a/언어 - JavaScript/1_자바스크립트_언어소개.md
+++ b/언어 - JavaScript/1_자바스크립트_언어소개.md
@@ -2,7 +2,7 @@
 - 웹 브라우저로 분류되는 소프트웨어들을 **프로그래밍적으로 제어**하기 위한 언어
 - 웹 브라우저 제어를 벗어나 웹 서버까지 영향을 확장하고 있음 (탈 웹 브라우저)
     - ex) 웹 서버를 동작하기 위한 도구 (서버 사이드 스크립트) => Node.js
-        - 웹 브라우저를 제어하기 위한 기술로써 자바스크립트, 웹 서버를 제어하기 위한 가술로써 자바스크립트를 사용 가능
+        - 웹 브라우저를 제어하기 위한 기술로써 자바스크립트, 웹 서버를 제어하기 위한 기술로써 자바스크립트를 사용 가능
         - 웹 사이트를 만들 때 웹 브라우저, 웹 서버 모두 다 자바스크립트로 통일시킬 수 있음
 - 탈 웹
     - 웹에서 사용되던 자바스크립트가 웹 바깥 기술에서도 사용되기 시작함
